--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -70,6 +70,7 @@
             float: right;
           }
           #footer {
+            display: none;
             clear: both;
             padding: 20px;
             margin-bottom: 20px;
@@ -77,6 +78,7 @@
           }
 
           #footer-sidebar-left {
+              display: none;
               width: 480px;
               margin-bottom: 20px;
               float: left;
@@ -84,6 +86,7 @@
             }
 
             #footer-sidebar-right {
+              display: none;
               width: 480px;
               margin-bottom: 20px;
               float: right;
