--- a/src/main/resources/templates/onePageExcel.html
+++ b/src/main/resources/templates/onePageExcel.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-<form th:action="@{/excel/read}" method="POST" enctype="multipart/form-data">
+<form th:action="@{/excel/onePageRead}" method="POST" enctype="multipart/form-data">
     <input type="file" th:name="file1">
-    <input type="file" th:name="file2">
     <input th:type="submit" value="제출" />
 </form>
 </body>
