--- a/src/main/resources/templates/ErrorFileType1.html
+++ b/src/main/resources/templates/ErrorFileType1.html
@@ -26,23 +26,23 @@
 
 </head>
 <body>
-    <div id="notfound">
-        <div class="notfound">
-            <div class="notfound-bg">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <h1>oops!</h1>
-            <h2>Error : Sheet1 혹은 Sheet2에 데이터 있는지 확인해주세요.</h2>
-            <a href="/onePageExcel">돌아가기</a>
-<!--            <div class="notfound-social">-->
-<!--                <a href="#"><i class="fa fa-facebook"></i></a>-->
-<!--                <a href="#"><i class="fa fa-twitter"></i></a>-->
-<!--                <a href="#"><i class="fa fa-pinterest"></i></a>-->
-<!--                <a href="#"><i class="fa fa-google-plus"></i></a>-->
-<!--            </div>-->
+<div id="notfound">
+    <div class="notfound">
+        <div class="notfound-bg">
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
+        <h1>oops!</h1>
+        <h2>Error : Excel 파일을 올려주세요.</h2>
+        <a href="/onePageExcel">돌아가기</a>
+        <!--            <div class="notfound-social">-->
+        <!--                <a href="#"><i class="fa fa-facebook"></i></a>-->
+        <!--                <a href="#"><i class="fa fa-twitter"></i></a>-->
+        <!--                <a href="#"><i class="fa fa-pinterest"></i></a>-->
+        <!--                <a href="#"><i class="fa fa-google-plus"></i></a>-->
+        <!--            </div>-->
     </div>
+</div>
 </body>
 </html>
