--- a/src/main/resources/templates/excelList.html
+++ b/src/main/resources/templates/excelList.html
@@ -6,7 +6,7 @@
     <title>전문 매핑</title>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://d3js.org/d3.v3.js"></script>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style_excelList.css}">
 
 </head>
 <body>
