--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,108 +1,144 @@
-<style>
-    .table {
-      border-collapse: collapse;
-      border-top: 3px solid #168;
-      width:475px;
-      table-layoutL fixed;
-      word-break:break-all;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+#notfound {
+  position: relative;
+  height: 100vh;
+  background-color: #fafbfd;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.notfound {
+  max-width: 520px;
+  width: 100%;
+  text-align: center;
+}
+
+.notfound .notfound-bg {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: -1;
+}
+
+.notfound .notfound-bg > div {
+  width: 100%;
+  background: #fff;
+  border-radius: 90px;
+  height: 125px;
+}
+
+.notfound .notfound-bg > div:nth-child(1) {
+  -webkit-box-shadow: 5px 5px 0px 0px #f3f3f3;
+          box-shadow: 5px 5px 0px 0px #f3f3f3;
+}
+
+.notfound .notfound-bg > div:nth-child(2) {
+  -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-box-shadow: 5px 5px 0px 0px #f3f3f3;
+          box-shadow: 5px 5px 0px 0px #f3f3f3;
+  position: relative;
+  z-index: 10;
+}
+
+.notfound .notfound-bg > div:nth-child(3) {
+  -webkit-box-shadow: 5px 5px 0px 0px #f3f3f3;
+          box-shadow: 5px 5px 0px 0px #f3f3f3;
+  position: relative;
+  z-index: 90;
+}
+
+.notfound h1 {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 86px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 8px;
+  color: #151515;
+}
+
+.notfound h2 {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 26px;
+  margin: 0;
+  font-weight: 700;
+  color: #151515;
+}
+
+.notfound a {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background: #18e06f;
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 700;
+  margin-top: 20px;
+}
+
+.notfound-social {
+  margin-top: 20px;
+}
+
+.notfound-social>a {
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  width: 40px;
+  font-size: 14px;
+  color: #fff;
+  background-color: #dedede;
+  margin: 3px;
+  padding: 0px;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+.notfound-social>a:hover {
+  background-color: #18e06f;
+}
+
+@media only screen and (max-width: 767px) {
+    .notfound .notfound-bg {
+      width: 287px;
+      margin: auto;
     }
-    .table th {
-      color: #168;
-      background: #f0f6f9;
-      text-align: center;
-    }
-    .table th, .table td {
-      padding: 10px;
-      border: 1px solid #ddd;
 
-    }
-    .table th:first-child, .table td:first-child {
-      border-left: 0;
-    }
-    .table th:last-child, .table td:last-child {
-      border-right: 0;
-    }
-    .table tr td:first-child{
-      text-align: center;
-    }
-    .table caption{caption-side: bottom; display: none;}
-    .table {font-size: 75%}
+    .notfound .notfound-bg > div {
+      height: 85px;
+  }
+}
 
-    .button {
-      border: none;
-      color: white;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer;
-    }
+@media only screen and (max-width: 480px) {
+  .notfound h1 {
+    font-size: 68px;
+  }
 
-          #container {
-            width: 1400px;
-            margin: 0px auto;
-            padding: 10px;
-
-          }
-          #header {
-            padding: 20px;
-            margin-bottom: 20px;
-
-          }
-          #sidebar-left {
-            width: 480px;
-            margin-bottom: 20px;
-            float: left;
-
-          }
-          #draw {
-            position: absolute;
-            width: 438px;
-            margin-bottom: 20px;
-            float: center;
-          }
-
-          #sidebar-right {
-            width: 480px;
-            margin-bottom: 20px;
-            float: right;
-          }
-          #footer {
-            display: none;
-            clear: both;
-            padding: 20px;
-            margin-bottom: 20px;
-
-          }
-
-          #footer-sidebar-left {
-              display: none;
-              width: 480px;
-              margin-bottom: 20px;
-              float: left;
-
-            }
-
-            #footer-sidebar-right {
-              display: none;
-              width: 480px;
-              margin-bottom: 20px;
-              float: right;
-            }
-
-            .btn {
-              display: inline-block;
-              background: #4e7c80;
-              color: white;
-              width:20%;
-              float:right;
-              cursor: pointer;
-              position: relative;
-              z-index: 11;
-              line-height: 1em;
-              &:hover {
-                background: darken(#4e7c80, 10%);
-              }
-  </style>
+  .notfound h2 {
+    font-size: 18px;
+  }
+}
