--- a/src/main/resources/templates/ErrorTwoExcel.html
+++ b/src/main/resources/templates/ErrorTwoExcel.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <title>404 Error</title>
+
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
+
+    <!-- Font Awesome Icon -->
+    <link type="text/css" rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
+
+    <!-- Custom stlylesheet -->
+    <link type="text/css" rel="stylesheet" th:href="@{/css/style.css}" />
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 <body>
-    Error Page!<br>
-    file1 , file 2에 데이터 있는지 확인해주세요.
+<div id="notfound">
+    <div class="notfound">
+        <div class="notfound-bg">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <h1>oops!</h1>
+        <h2>Error : file1 , file 2에 데이터 있는지 확인해주세요.</h2>
+        <a href="/multiExcel">돌아가기</a>
+        <!--            <div class="notfound-social">-->
+        <!--                <a href="#"><i class="fa fa-facebook"></i></a>-->
+        <!--                <a href="#"><i class="fa fa-twitter"></i></a>-->
+        <!--                <a href="#"><i class="fa fa-pinterest"></i></a>-->
+        <!--                <a href="#"><i class="fa fa-google-plus"></i></a>-->
+        <!--            </div>-->
+    </div>
+</div>
 </body>
 </html>
