알림 메세지 수정

--- a/src/main/resources/templates/excelList.html
+++ b/src/main/resources/templates/excelList.html
@@ -177,7 +177,7 @@
 		$("#table1 tbody tr").click(function(e){
 
             if(mode == 'auto'){
-                alert("초기화를 먼저 진행해주세요");
+                alert("자동 매핑 결과가 이미 있습니다. 초기화 후 다시 진행해주세요");
             }
             else if(isDrawComplete == true){
                 alert("이미 매핑된 결과가 있습니다. 초기화 후 다시 시도해주세요.")
@@ -224,7 +224,7 @@
         <!--테이블의 Row 클릭시 값 가져오기-->
 		$("#table2 tbody tr").click(function(e){
             if(mode == 'auto'){
-                alert("초기화를 먼저 진행해주세요");
+                alert("자동 매핑 결과가 이미 있습니다. 초기화 후 다시 진행해주세요");
             }
             else if(isDrawComplete == true){
                 alert("이미 매핑된 결과가 있습니다. 초기화 후 다시 시도해주세요.")
